--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
 		<!-- <script src="games/box.js"></script> -->
 	</head>
 	<body>
-		<div id="header">
+		<header>
 			<h1>Demo</h1>
 			<div id="list">ABC | DEF | GHI | JKL</div>
-		</div>
+		</header>
 		<div id="container">
 			<canvas id="canvas" width="935" height="465"></canvas>
 		</div>
+		<footer>Credit: <i>Heaven and Hell</i>, by <a href="http://jay-peg.deviantart.com/" target="_blank">jay-peg</a></footer>
 	</body>
 </html>
