--- a/index.html
+++ b/index.html
@@ -2,17 +2,21 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="demo.css">
-		<script src="games/colors.js"></script>
 		<!-- <script src="games/box.js"></script> -->
+		<script src="games/colors.js"></script>
+		<script src="games/main.js"></script>
 	</head>
 	<body>
 		<header>
 			<h1>Demo</h1>
-			<div id="list">ABC | DEF | GHI | JKL</div>
+			<ul id="list">
+				<li id="color">Color</li>
+				<li id="other">Other</li>
+				<li id="other-2">Other 2</li>
+			</ul>
 		</header>
 		<div id="container">
-			<canvas id="canvas" width="935" height="465"></canvas>
 		</div>
-		<footer>Credit: <i>Heaven and Hell</i>, by <a href="http://jay-peg.deviantart.com/" target="_blank">jay-peg</a></footer>
+		<footer></footer>
 	</body>
 </html>
