--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="demo.css">
-		<!-- <script src="games/box.js"></script> -->
 		<script src="games/colors.js"></script>
+		<script src="games/mouse.js"></script>
+		<script src="games/space.js"></script>
+		<script src="games/lander.js"></script>
 		<script src="games/main.js"></script>
 	</head>
 	<body>
@@ -11,8 +13,9 @@
 			<h1>Demo</h1>
 			<ul id="list">
 				<li id="color">Color</li>
-				<li id="other">Other</li>
-				<li id="other-2">Other 2</li>
+				<li id="mouse">Mouse</li>
+				<li id="space">Space</li>
+				<li id="lander">Lander</li>
 			</ul>
 		</header>
 		<div id="container">
