--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 		<script src="games/space.js"></script>
 		<script src="games/lander.js"></script>
 		<script src="games/main.js"></script>
+		<title>Media Demos</title>
 	</head>
 	<body>
 		<header>
-			<h1>Demo</h1>
+			<h1>Media Demos</h1>
 			<ul id="list">
 				<li id="color">Color</li>
 				<li id="mouse">Mouse</li>
