--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="demo.css">
-		<script src="games/colors.js"></script>
-		<script src="games/mouse.js"></script>
+		<!-- <script src="games/colors.js"></script> -->
+<!-- 		<script src="games/mouse.js"></script>
 		<script src="games/space.js"></script>
 		<script src="games/lander.js"></script>
-		<script src="games/main.js"></script>
+		<script src="games/main.js"></script> -->
+		<!-- <script src="games/colors2.js"></script> -->
+		<!-- <script src="games/colors3.js"></script> -->
+		<script src="games/colors4.js"></script>
 		<title>Media Demos</title>
 	</head>
 	<body>
@@ -14,13 +17,19 @@
 			<h1>Media Demos</h1>
 			<ul id="list">
 				<li id="color">Color</li>
-				<li id="mouse">Mouse</li>
+<!-- 				<li id="mouse">Mouse</li>
 				<li id="space">Space</li>
-				<li id="lander">Lander</li>
+				<li id="lander">Lander</li> -->
 			</ul>
 		</header>
 		<div id="container">
+
 		</div>
 		<footer></footer>
+		<script>
+			// startColorGame("container", 935, 465, "grid.png");
+			startColorGame("container", 935, 465, "floor.jpg", "floor2.jpg");
+			// startColorGame("container", 935, 465, "color_guy.jpg", "black_guy.jpg");
+		</script>
 	</body>
 </html>
